# ecs-framework

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Driver/: CMakeLists.txt
Driver/include/: AttackComponent.hpp  Attacker.hpp  BattleScene.hpp  BattleSystem.hpp  CombatEntity.hpp  CombatEventHandler.hpp  Driver.hpp  EventTypes.hpp
Driver/src/: AttackComponent.cpp  Attacker.cpp  BattleScene.cpp  BattleSystem.cpp  CombatEntity.cpp  Driver.cpp
ECS/: CMakeLists.txt
ECS/include/: Component.hpp  ComponentManager.hpp  Defines.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventHandler.hpp  IComponent.hpp  IEntity.hpp  IEvent.hpp  IObserver.hpp  ISubject.hpp  ISystem.hpp  System.hpp  SystemManager.hpp
ECS/include/Event/: Event.hpp  IEvent.hpp  IEventListener.hpp  IObserver.hpp  ISubject.hpp
ECS/src/: Component.cpp  ComponentManager.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  Event.cpp  System.cpp  SystemManager.cpp
